--- a/main.html
+++ b/main.html
@@ -4,10 +4,27 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+<h1>Bootstrap Buttons</h1>
+<button type="button" class="btn btn-primary">Button 1</button>
+<button type="button" class="btn btn-light">Button 2</button>	
+	<button type="button" class="btn btn-success">Button 3</button>
+	<button type="button" class="btn btn-danger">Button 4</button>
+ <br>
+	<div class="d-grid gap-2">
+  
+ <button type="button" class="btn btn-warning">Button 5</button>
+</div>
+	<button type="button" class="btn btn-info">Button 6</button>
+
+<button type="button" class="btn btn-light">Button 7</button>
+
+<button type="button" class="btn btn-link">Button 8</button>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
 
