--- a/main.html
+++ b/main.html
@@ -10,20 +10,20 @@
 <body>
 	<!-- the entire body must be written by student -->
 <h1>Bootstrap Buttons</h1>
-<button id="button-1"type="button" class="btn btn-primary">Button 1</button>
-<button id="button-2" type="button" class="btn btn-light">Button 2</button>	
-	<button id="button-3" type="button" class="btn btn-success">Button 3</button>
-	<button id="button-4" type="button" class="btn btn-danger">Button 4</button>
+<button type="button" class="btn btn-primary" id="button-1">Button 1</button>
+<button type="button" class="btn btn-light" id="button-2">Button 2</button>	
+	<button type="button" class="btn btn-success" id="button-3">Button 3</button>
+	<button type="button" class="btn btn-danger" id="button-4">Button 4</button>
  <br>
 	<div class="d-grid gap-2">
   
- <button id="button-5" type="button" class="btn btn-warning">Button 5</button>
+ <button type="button" class="btn btn-warning" id="button-5">Button 5</button>
 </div>
-	<button id="button-6" type="button" class="btn btn-info">Button 6</button>
+	<button type="button" class="btn btn-info" id="button-6">Button 6</button>
 
-<button id="button-7"  type="button" class="btn btn-light">Button 7</button>
+<button  type="button" class="btn btn-light" id="button-7">Button 7</button>
 
-<button id="button-8" type="button" class="btn btn-link">Button 8</button>
+<button type="button" class="btn btn-link" id="button-8">Button 8</button>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
