--- a/main.html
+++ b/main.html
@@ -11,15 +11,15 @@
 	<!-- the entire body must be written by student -->
 <h1>Bootstrap Buttons</h1>
 <button type="button" class="btn btn-primary" id="button-1">Button 1</button>
-<button type="button" class="btn btn-light" id="button-2">Button 2</button>	
-	<button type="button" class="btn btn-success" id="button-3">Button 3</button>
-	<button type="button" class="btn btn-danger" id="button-4">Button 4</button>
+<button type="button" class="btn btn-outline-secondary" id="button-2">Button 2</button>	
+	<button type="button" class="btn btn-success btn-lg" id="button-3">Button 3</button>
+	<button type="button" class="btn btn-danger btn-sm" id="button-4">Button 4</button>
  <br>
 	<div class="d-grid gap-2">
   
- <button type="button" class="btn btn-warning" id="button-5">Button 5</button>
+ <button type="button" class="btn btn-warning btn-lg btn-block" id="button-5">Button 5</button>
 </div>
-	<button type="button" class="btn btn-info" id="button-6">Button 6</button>
+	<button type="button" class="btn btn-info disabled" id="button-6">Button 6</button>
 
 <button  type="button" class="btn btn-light" id="button-7">Button 7</button>
 
